# BiRefNet-Burn

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
backbones/: Cargo.toml
backbones/pvt_v2/: Cargo.toml  generate_test_data.py
backbones/pvt_v2/src/: lib.rs
backbones/pvt_v2/test_data/: README.md  USAGE.md
backbones/pvt_v2/test_data/metadata/: block_test.json  patch_embed_test.json  pvt_v2_b2_test.json
backbones/resnet/: Cargo.toml
backbones/resnet/src/: blocks.rs  lib.rs
backbones/src/: lib.rs
backbones/swin_transformer/: Cargo.toml  generate_test_data.py
backbones/swin_transformer/src/: lib.rs
backbones/swin_transformer/test_data/: README.md  USAGE.md
backbones/swin_transformer/test_data/metadata/: patch_embed_test.json  swin_v1_s_test.json  swin_v1_t_test.json  window_attention_test.json
backbones/vgg/: Cargo.toml  generate_test_data.py
backbones/vgg/src/: lib.rs
backbones/vgg/test_data/: README.md
backbones/vgg/test_data/metadata/: vgg16_test.json  vgg16bn_test.json  vgg_conv1_test.json
birefnet/: Cargo.toml
birefnet/src/: config.rs  dataset.rs  error.rs  lib.rs  losses.rs  metrics.rs  models.rs  special.rs  tests.rs  training.rs
birefnet/src/config/: core.rs  enums.rs  mod.rs
birefnet/src/losses/: bce.rs  birefnet_loss.rs  classification.rs  combined.rs  contour.rs  iou.rs  mae.rs  mod.rs  mse.rs  multiscale.rs  pixel.rs  ssim.rs  structure.rs  threshold_regularization.rs  triplet.rs
birefnet/src/metrics/: aggregator.rs  e_measure.rs  f_measure.rs  input.rs  iou.rs  loss.rs  mae.rs  mod.rs  mse.rs  s_measure.rs  utils.rs  weighted_f_measure.rs
birefnet/src/models/: backbones.rs  birefnet.rs  decoder.rs  mod.rs  modules.rs
birefnet/src/models/backbones/: build_backbone.rs  resnet.rs  resnet_block.rs  swin_v1.rs  vgg.rs
birefnet/src/models/modules/: aspp.rs  decoder_blocks.rs  deform_conv.rs  lateral_blocks.rs  mlp.rs  simple_convs.rs  utils.rs
birefnet/src/models/refinement/: mod.rs  refiner.rs
birefnet/src/special/: drop_path.rs  erfinv.rs  identity.rs  roll.rs  slice.rs  trunc_normal.rs
burn-extra-ops/: Cargo.toml
burn-extra-ops/src/: drop_path.rs  erfinv.rs  identity.rs  lib.rs  slice.rs  trunc_normal.rs
config/: General.txt  GeneralHR.txt
crates/birefnet/: Cargo.toml  README.md
crates/birefnet-backbones/: Cargo.toml  README.md
crates/birefnet-backbones/src/: lib.rs
crates/birefnet-backbones/src/backbones/: mod.rs  pvt_v2.rs  resnet.rs  swin_transformer.rs  vgg.rs
crates/birefnet-backbones/src/backbones/resnet/: blocks.rs
crates/birefnet-extra-ops/: Cargo.toml  README.md
crates/birefnet-extra-ops/src/: drop_path.rs  erfinv.rs  identity.rs  lib.rs  trunc_normal.rs
crates/birefnet-inference/: Cargo.toml  README.md
crates/birefnet-inference/src/: lib.rs  postprocessing.rs
crates/birefnet-loss/: Cargo.toml  README.md
crates/birefnet-loss/src/: birefnet_loss.rs  classification.rs  contour.rs  iou.rs  lib.rs  mae.rs  patch_iou.rs  pixel.rs  ssim.rs  structure.rs  threshold_regularization.rs
crates/birefnet-metric/: Cargo.toml  README.md
crates/birefnet-metric/src/: aggregator.rs  biou.rs  e_measure.rs  f_measure.rs  input.rs  lib.rs  loss.rs  mae.rs  mse.rs  s_measure.rs  utils.rs  weighted_f_measure.rs
crates/birefnet-model/: Cargo.toml  README.md
crates/birefnet-model/src/: lib.rs  training.rs
crates/birefnet-model/src/config/: core.rs  enums.rs  mod.rs
crates/birefnet-model/src/models/: birefnet.rs  decoder.rs  modules.rs
crates/birefnet-model/src/models/modules/: aspp.rs  decoder_blocks.rs  deform_conv.rs  lateral_blocks.rs  simple_convs.rs  utils.rs
crates/birefnet-model/src/models/refinement/: mod.rs  refiner.rs
crates/birefnet-train/: Cargo.toml  README.md
crates/birefnet-train/src/: augmentation.rs  dataset.rs  error.rs  lib.rs
crates/birefnet-util/: Cargo.toml  README.md
crates/birefnet-util/src/: array_ops.rs  distance.rs  filters.rs  foreground_refiner.rs  image.rs  lib.rs  morphology.rs  weights.rs
crates/birefnet/src/: backend.rs  inference.rs  lib.rs  training.rs
examples/: Cargo.toml
examples/converter/: Cargo.toml
examples/converter/src/: main.rs
examples/dataset_test/: Cargo.toml
examples/dataset_test/src/: main.rs
examples/inference/: Cargo.toml
examples/inference/src/: imageops_ai.rs  main.rs  utils.rs
examples/inference/src/imageops_ai/: alpha_mask_applicable.rs  box_filter.rs  clip_minimum_border.rs  convert_color.rs  padding.rs
examples/src/: config.rs  lib.rs
examples/src/common/: backend.rs  image.rs  mod.rs  postprocessing.rs  weights.rs
examples/training/: Cargo.toml
examples/training/src/: main.rs
src/: config.rs  lib.rs  models.rs  special.rs
src/models/: backbones.rs  birefnet.rs  modules.rs
src/models/backbones/: build_backbone.rs  swin_v1.rs
src/models/modules/: aspp.rs  decoder_blocks.rs  deform_conv.rs  lateral_blocks.rs  mlp.rs  utils.rs
src/special/: deform_conv.rs  drop_path.rs  erfinv.rs  identity.rs  roll.rs  sequential.rs  trunc_normal.rs
