[workspace]
resolver = "2"

members = [
    "backbones",
    "backbones/resnet",
    "backbones/swin_transformer",
    "backbones/vgg",
    "burn-extra-ops",
    "birefnet",
    "examples",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nusu-github/BiRefNet-Burn"
homepage = "https://github.com/nusu-github/BiRefNet-Burn"

[workspace.dependencies]
burn = { version = "0.18.0", default-features = false }
burn-import = { version = "0.18.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25.6", default-features = false }
libm = "0.2.15"
walkdir = "2.5.0"

[profile.dev.package.image]
opt-level = 3
