[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nusu-github/BiRefNet-Burn"
homepage = "https://github.com/nusu-github/BiRefNet-Burn"
rust-version = "1.85.1"

[workspace.dependencies]
# Core Burn dependencies
burn = { version = "0.18.0", features = ["std"], default-features = false }
burn-import = { version = "0.18.0", default-features = false }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = { version = "0.25.6", default-features = false }
imageproc = "0.25.0"

# Utilities
approx = "0.5"
cfg-if = "1.0.3"
libm = "0.2.15"
rand = "0.9.2"
stacker = "0.1.21"
walkdir = "2.5.0"

# Testing and benchmarking
rstest = "0.26.1"

# Model hub integration
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq", "rustls-tls"] }

[profile.dev.package.image]
opt-level = 3
