[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nusu-github/BiRefNet-Burn"
homepage = "https://github.com/nusu-github/BiRefNet-Burn"

[workspace.dependencies]
# Core Burn dependencies
burn = { version = "0.20.0", features = ["std"], default-features = false }
burn-import = { version = "0.20.0", default-features = false }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = { version = "0.25.9", default-features = false }
imageproc = "0.26.0"

# Utilities
approx = "0.5"
cfg-if = "1.0.4"
libm = "0.2.15"
rand = "0.9.2"
stacker = "0.1.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"

# Testing and benchmarking
rstest = "0.26.1"

# Model hub integration
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq", "rustls-tls"] }

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
literal_string_with_formatting_args = "allow"

[profile.dev.package.image]
opt-level = 3
