[package]
name = "backbones"
version = "0.1.0"
edition = "2021"
description = "Unified backbone implementations for BiRefNet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nusu-github/BiRefNet-Burn"

[dependencies]
burn = { workspace = true }
resnet = { path = "resnet" }
vgg = { path = "vgg" }
swin_transformer = { path = "swin_transformer" }
pvt_v2 = { path = "pvt_v2" }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
