[package]
name = "birefnet-burn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust implementation of BiRefNet for high-resolution dichotomous image segmentation using Burn"

[features]
default = []

train = ["burn/train", "burn/vision", "dep:image", "dep:walkdir"]
pretrained = ["burn-import", "dirs"]

[dependencies]
burn = { workspace = true }
burn-import = { workspace = true, optional = true }
image = { workspace = true, optional = true }
thiserror = "2"
walkdir = { workspace = true, optional = true }
backbones = { path = "../backbones" }
burn-extra-ops = { path = "../burn-extra-ops" }
dirs = { version = "6.0", optional = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
