[package]
name = "burn-extra-ops"
version = "0.1.0"
edition = "2021"
description = "Additional operations for the Burn deep learning framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nusu-github/BiRefNet-Burn"
keywords = ["burn", "deep-learning", "tensor-operations"]
categories = ["science", "mathematics"]

[dependencies]
burn = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray", "autodiff"] }