[package]
name = "swin_transformer"
version = "0.1.0"
edition = "2021"
description = "Swin Transformer backbone implementation for BiRefNet using Burn"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nusu-github/BiRefNet-Burn"

[dependencies]
burn = { workspace = true }
burn-extra-ops = { path = "../../burn-extra-ops" }
libm = "0.2"
thiserror = "2"

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }