[package]
name = "birefnet-backbones"
description = "Unified backbone implementations for BiRefNet"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
burn = { workspace = true }
birefnet-extra-ops = { path = "../birefnet-extra-ops" }

thiserror = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
rstest = { workspace = true }
