[package]
name = "birefnet-extra-ops"
description = "Additional operations for the Burn deep learning framework"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
burn = { workspace = true }
libm = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["cpu"] }
rstest = { workspace = true }