[package]
name = "birefnet-loss"
description = "Comprehensive loss functions for deep learning segmentation tasks in Burn"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
burn = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray"] }
