[package]
name = "birefnet-metric"
description = "Custom evaluation metrics for BiRefNet implemented in Rust using Burn framework"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true
keywords = ["birefnet", "metrics", "evaluation", "segmentation", "burn"]
categories = ["computer-vision"]

[features]
default = []

[dependencies]
burn = { workspace = true, features = ["train"] }
derive-new = "0.7.0"

[dev-dependencies]
burn = { workspace = true, features = ["ndarray", "train"] }
