[package]
name = "birefnet-train"
description = "Training infrastructure for BiRefNet models"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
burn = { workspace = true, features = ["train"] }
birefnet-model = { path = "../birefnet-model", features = ["train"] }
birefnet-loss = { path = "../birefnet-loss" }

image = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["ndarray", "train"] }
