[package]
name = "converter"
license.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
birefnet-burn = { path = "../../birefnet" }
burn = { workspace = true, features = ["std", "ndarray"] }
burn-import = { workspace = true }

anyhow = "1"
clap = { version = "^4.5.20", features = ["derive"] }
