[package]
name = "converter"
license.workspace = true
version.workspace = true
edition.workspace = true
description = "PyTorch to Burn model converter for BiRefNet"
publish = false

[dependencies]
birefnet-burn = { path = "../../birefnet" }
burn = { workspace = true, features = ["ndarray"] }
burn-import = { workspace = true }

anyhow = "1"
clap = { version = "4.5.41", features = ["derive"] }
