[package]
name = "dataset_test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BiRefNet dataset loading and validation test"
publish = false

[dependencies]
birefnet-burn = { path = "../../birefnet", features = ["train"] }
burn = { workspace = true, features = ["ndarray", "dataset"] }
