[package]
name = "inference"
license.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["ndarray"]

#cuda = ["burn/cuda-jit"]
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

#openblas = ["burn/openblas"]
#openblas-system = ["burn/openblas-system"]
#fusion = ["burn/fusion"]

[dependencies]
birefnet-burn = { path = "../../birefnet" }
burn = { workspace = true }

anyhow = "1"
clap = { version = "4.5.41", features = ["derive"] }
image = "0.25.6"
imageops-kit = { git = "https://github.com/nusu-github/imageops-kit", version = "0.1.0" }
num-traits = "0.2.19"
