[package]
name = "inference"
license.workspace = true
version.workspace = true
edition.workspace = true
description = "BiRefNet inference example with image preprocessing and postprocessing"
publish = false

[features]
default = ["ndarray"]

# Backend features
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

# Backend specifications
accelerate = ["burn/accelerate"]
blas-netlib = ["burn/blas-netlib"]
openblas = ["burn/openblas"]
openblas-system = ["burn/openblas-system"]

# Performance features
fusion = ["burn/fusion"]

[dependencies]
birefnet-burn = { path = "../../birefnet" }
burn = { workspace = true }

anyhow = "1"
clap = { version = "4.5.41", features = ["derive"] }
image = { workspace = true }
imageops-kit = { git = "https://github.com/nusu-github/imageops-kit", version = "0.1.0" }
