[package]
name = "training"
version = "0.1.0"
edition = "2021"

[features]
default = ["ndarray"]

# Backend features
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

# Backend specifications
accelerate = ["burn/accelerate"]
blas-netlib = ["burn/blas-netlib"]
openblas = ["burn/openblas"]
openblas-system = ["burn/openblas-system"]

# Performance features
fusion = ["burn/fusion"]

# Training features
metrics = ["burn/metrics"]

[dependencies]
anyhow = "1"
birefnet-burn = { path = "../../birefnet", features = ["train"] }
burn = { workspace = true, features = ["train", "tui"] }
clap = { version = "4.5.41", features = ["derive"] }
